--- a/yp/thesis.bib
+++ b/yp/thesis.bib
@@ -1,121 +1,95 @@
 % !TeX encoding = Windows-1251
 
-@BOOK{JohnLevine,
-  author    = {John Levine},
-  title     = {flex \& bison},
-  subtitle  = {Unix Text Processing Tools},
-  publisher = {O’Reilly Media},
-  year      = {2009},
+@BOOK{дейт,
+  author    = {Дейт, К Дж},
+  title     = {Введение в системы баз данных},
+  publisher = {Вильямс},
+  address   = {Россия, г. Москва, ул. Лесная, д. 43},
+  year      = {2008},
+  language  = {russian},
+  pages     = {1328},
+}
+
+@BOOK{гарсия,
+  author    = {Гарсиа-Молина, Гектор and Ульман, Джеффри Д and Уидом, Дженнифер},
+  title     = {Системы баз данных: Полный курс},
+  year      = {2003},
+  publisher = {Вильямс},
+  address   = {Россия, г. Москва, ул. Лесная, д. 43},
+  language  = {russian},
+  pages     = {1088},
+}
+
+@BOOk{coronel,
+  title     = {Системы баз данных: проектирование, реализация и управление},
+  author    = {Роб, Питер and Коронел, Карлос},
+  year      = {2004},
+  publisher = {БХВ-Петербург},
+  language  = {russian},
+  pages     = {1024},
+  address   = {Россия, г. Санкт-Петербург, ул. Гончарная, д. 20},
+}
+
+@ARTICLE{ульман,
+  title     = {Введение в системы баз данных},
+  author    = {Ульман, Дж and Уидом, Дж},
+  journal   = {М.: Лори},
+  pages     = {379},
+  volume    = {374},
+  year      = {2000},
+  language  = {russian},
+}
+
+@ARTICLE{кузнецов,
+  title     = {Основы баз данных},
+  author    = {Кузнецов, Сергей Дмитриевич},
+  journal   = {М.: Бином. Лаборатория знаний},
+  pages     = {484},
+  year      = {2007},
+  language  = {russian},
+}
+
+@BOOK{тарасов,
+  title     = {СУБД для программиста. Базы данных изнутри},
+  author    = {Тарасов, СВ},
+  publisher = {Солон-Пресс},
+  year      = {2015},
+  language  = {russian},
+  pages     = {320},
+  address   = {Росиия, г. Москва, ул. Садовая Кудринская д. 11},
+}
+
+@article{быков,
+  title     = {Тенденции технологий разработки баз данных},
+  author    = {Быков, ДС and Быкова, НС},
+  journal   = {Modern Science},
+  number    = {4-3},
+  pages     = {502--505},
+  year      = {2021},
+  language  = {russian},
+}
+
+@BOOK{celko,
+  title     = {Joe Celko's thinking in sets: auxiliary, temporal, and virtual tables in SQL},
+  author    = {Celko, Joe},
+  year      = {2008},
+  publisher = {Morgan Kaufmann},
+  address   = {USA, Waltham},
   language  = {english},
-  pages     = {294},
+  pages     = {384},
 }
 
-@BOOK{MSDN,
-  title = {Создание приложения Windows Forms с помощью .NET Framework (C++) [{Э}лектронный ресурс]},
-  note  = {URL:~\url{http://msdn.microsoft.com/ru-ru/library/vstudio/ms235634(v=vs.100).aspx} (Дата обращения 12.07.2013). Загл. с экр. Яз. рус.},
+@inproceedings{bigdata,
+  title        = {Big data: A review},
+  author       = {Sagiroglu, Seref and Sinanc, Duygu},
+  booktitle    = {2013 international conference on collaboration technologies and systems (CTS)},
+  pages        = {42--47},
+  year         = {2013},
+  organization = {IEEE},
+  language     = {english},
 }
 
-@CONFERENCE{lienhart_maydt_2002,
-  address   = {Rochester, USA},
-  author    = {Lienhart, R. and Maydt, J.},
-  booktitle = {Proceedings of the International Conference on Image Processing},
-  title     = {An Extended Set of Haar-like Features for Rapid Object Detection},
-  year      = {2002},
-  volume    = {1},
-  pages     = {900-903}
-}
-
-@ARTICLE{Yoffe_1993_AP_42_173,
-  author  = {A. D. Yoffe},
-  title   = {Low-dimensional systems: quantum size effects and electronic
-             properties of semiconductor microcrystallites (zero-dimensional
-             systems) and some quasi-two-dimensional systems},
-  journal = {Adv. Phys.},
-  pages   = {173--266},
-  volume  = {42},
-  year    = {1993},
-  doi     = {10.1080/00018739300101484},
-}
-
-@ARTICLE{Efros_1982_FTP_16_7_1209,
-  author   = {{\relax Ал}. Л. Эфрос and А. Л. Эфрос and А. И. Ансельм and  Segall, B.},
-  title    = {Межзонное поглощение света в полупроводниковом шаре},
-  journal  = {Физика и техника полупроводников},
-  year     = {1982},
-  volume   = {16},
-  number   = {7},
-  pages    = {1209--1214},
-  language = {russian},
-}
-
-@BOOK{Anselm_1978,
-  author    = {А. И. Ансельм},
-  title     = {Введение в теорию полупроводников},
-  publisher = {Наука},
-  address   = {Москва},
-  year      = {1978},
-  language  = {russian},
-}
-
-@INPROCEEDINGS{Segall_1968,
-  author    = {B. Segall},
-  year      = {1968},
-  editor    = {S. M. Ryvkin},
-  booktitle = {Proceedings of IXth Conference on the Physics of Semiconductors, Moscow, 1968},
-  pages     = {425},
-  address   = {Leningrad},
-  publisher = {Nauka},
-}
-
-@INBOOK{Agranovich_1983,
-  editor    = {V. M. Agranovich and R. M. Hochstrasser},
-  title     = {Spectroscopy and Excitation Dynamics of Condensed Molecular Systems},
-  chapter   = {6},
-  publisher = {North-Holland},
-  year      = {1983},
-  series    = {Modern Problems in Condensed Matter Sciences},
-  address   = {Amsterdam},
-  isbn      = {0444863133},
-}
-
-@INCOLLECTION{InP,
-  title        = {{InP Basic Parameters at 300 K} [{Э}лектронный ресурс]},
-  booktitle    = {Electronic archive New Semiconductor Materials. Characteristics and Properties},
-  organization = {Ioffe Physico-Technical Institute},
-  address      = {St. Petersburg},
-  year         = {2001},
-  note         = {URL:~{http://www.ioffe.rssi.ru/SVA/NSM/Semicond/InP/basic.html}\ (Дата обращения 01.11.2009). Загл. с экр. Яз. англ.}
-}
-
-@PHDTHESIS{Mishchenko_1996,
-  author   = {Е. Ж. Мищенко},
-  title    = {Неупругое рассеяние света в системе взаимодействующих электронов и фононов},
-  school   = {ИТФ им. Л.~Д.~Ландау},
-  year     = {1996},
-  language = {russian},
-}
-
-% old-style arXiv reference
-@ARTICLE{Perelman_2003_math:0307245,
-  author = {Grisha Perelman},
-  title  = {Finite extinction time for the solutions to the Ricci flow on certain three-manifolds},
-  eprint = {math/0307245},
-}
-
-% new-style arXiv reference
-@ARTICLE{Nielsen_2010_1006.2735,
-  title         = {A configuration interaction analysis of exchange in double quantum dots},
-  author        = {Erik Nielsen and Richard P. Muller},
-  archivePrefix = {arXiv},
-  eprint        = {1006.2735},
-  primaryClass  = {cond-mat},
-}
-
-@BOOK{matrix_87,
-  author    = {Эстербю, О. and Златев, З.},
-  title     = {Прямые методы для разреженных матиц},
-  publisher = {Мир},
-  address   = {М.},
-  year      = {1987},
-  language  = {russian},
+@BOOK{mySQL,
+  title = {MySQL Documentation [{Э}лектронный ресурс]},
+  note  = {URL:~\url{https://dev.mysql.com/doc/} (Дата обращения 22.11.2022). Загл. с экр. Яз. англ.},
 }
