--- a/yp/SCWorks.cls
+++ b/yp/SCWorks.cls
@@ -1,5 +1,5 @@
 \LoadClass[14pt]{extarticle}
-% \RequirePackage[14pt]{extsizes}
+%\RequirePackage[14pt]{extsizes}
 \RequirePackage[
   		a4paper, mag=1000,
   		left=2.5cm, right=1.5cm, top=2cm, bottom=2cm, bindingoffset=0cm,
@@ -12,6 +12,8 @@
 \RequirePackage{caption}
 \RequirePackage{graphicx}
 \RequirePackage[inline]{enumitem}
+
+
 
 
 % --------------------------------------------------------------------------%
@@ -37,11 +39,8 @@
 \def\critictitle#1{\gdef\@critictitle{#1}}\critictitle{\hbox to 3cm{\hrulefill}}
 \def\criticname#1{\gdef\@criticname{#1}}\criticname{\hbox to 3cm{\hrulefill}}
 \def\secrname#1{\gdef\@secrname{#1}}\secrname{\hbox to 3cm{\hrulefill}}
-\def\chpretitle#1{\gdef\@chpretitle{#1}}\chpretitle{\hbox to 3cm{\hrulefill}}
 \def\chtitle#1{\gdef\@chtitle{#1}}\chtitle{\hbox to 3cm{\hrulefill}}
 \def\chname#1{\gdef\@chname{#1}}\chname{\hbox to 3cm{\hrulefill}}
-\def\nirtitle#1{\gdef\@nirtitle{#1}}\nirtitle{\hbox to 3cm{\hrulefill}}
-\def\nirname#1{\gdef\@nirname{#1}}\nirname{\hbox to 3cm{\hrulefill}}
 %\def\year#1{\gdef\@year{#1}}
 \def\spectype#1{\gdef\@spectype{#1}}
 \def\spectyperod#1{\gdef\@spectyperod{#1}}
@@ -146,13 +145,6 @@
     \worktype{\cyr\CYRK\cyru\cyrr\cyrs\cyro\cyrv\cyra\cyrya\ \cyrr\cyra\cyrb%
     \cyro\cyrt\cyra}
     \renewcommand{\maketitle}{\CDMakeTitle}
-    \workname{\MakeUppercase{\@worktype}}
-    \typework{\cyr\cyrn\cyra\cyrp\cyri\cyrs\cyra\cyrn\cyra}
-}
-
-\DeclareOption{nirjournal}{%
-    \worktype{\cyrd\cyrn\cyre\cyrv\cyrn\cyri\cyrk\ \cyrn\cyri\cyrr}
-    \renewcommand{\maketitle}{\NIRJournalMakeTitle}
     \workname{\MakeUppercase{\@worktype}}
     \typework{\cyr\cyrn\cyra\cyrp\cyri\cyrs\cyra\cyrn\cyra}
 }
@@ -277,19 +269,17 @@
     \renewcommand{\maketitle}{\RefMakeTitle}
     \typework{\cyr\cyrn\cyra\cyrp\cyri\cyrs\cyra\cyrn}
 }
-
 \DeclareOption{otchet}{%
-    \worktype{\cyro\CYRT\cyrch\cyryo\cyrt}
+    \worktype{\cyr\CYRO\cyrt\cyrch\cyre\cyrt}
     \workname{\MakeUppercase{\@worktype}}
     \renewcommand{\maketitle}{\RefMakeTitle}
     \typework{\cyr\cyrn\cyra\cyrp\cyri\cyrs\cyra\cyrn}
 }
-
-\DeclareOption{digital}{%
-    \worktype{\CYRI\CYRT\CYRO\CYRG\CYRO\CYRV\CYRA\CYRYA\ \CYRA\CYRT\CYRT\CYRE\CYRS\CYRT\CYRA\CYRC\CYRI\CYRO\CYRN\CYRA\CYRYA\ \CYRR\CYRA\CYRB\CYRO\CYRT\CYRA}
+\DeclareOption{labwork}{%
+    \worktype{\cyr\CYRL\cyra\cyrb\cyro\cyrr\cyra\cyrt\cyro\cyrr\cyrn\cyra\cyrya\ \cyrr\cyra\cyrb\cyro\cyrt\cyra}
     \workname{\MakeUppercase{\@worktype}}
-    \renewcommand{\maketitle}{\DigitalMakeTitle}
-    \typework{\cyr\cyrn\cyra\cyrp\cyri\cyrs\cyra\cyrn\cyra}
+    \renewcommand{\maketitle}{\RefMakeTitle}
+    \typework{\cyr\cyrn\cyra\cyrp\cyri\cyrs\cyra\cyrn}
 }
 
 \DeclareOption{och}{%
@@ -415,26 +405,6 @@
 \setcounter{section}{0}
 \secformat
 
-% For Assembly lab works
-
-\newcommand{\task}{\starsection{\CYRT\cyre\cyrk\cyrs\cyrt\ %
-\cyrz\cyra\cyrd\cyra\cyrn\cyri\cyrya}}
-
-\newcommand{\code}{\starsection{\CYRT\cyre\cyrk\cyrs\cyrt\cyrery\ %
-\cyrp\cyrr\cyro\cyrg\cyrr\cyra\cyrm\cyrm\ %
-\cyrn\cyra\ \cyra\cyrs\cyrs\cyre\cyrm\cyrb\cyrl\cyre\cyrr\cyre}}
-
-\newcommand{\commandfiles}{\starsection{\CYRT\cyre\cyrk\cyrs\cyrt\cyrery\ %
-\cyrk\cyro\cyrm\cyra\cyrn\cyrd\cyrn\cyrery\cyrh\ %
-\cyrf\cyra\cyrishrt\cyrl\cyro\cyrv}}
-
-\newcommand{\trassirovka}{\starsection{\CYRT\cyra\cyrb\cyrl\cyri\cyrc\cyrery\ %
-\cyrt\cyrr\cyra\cyrs\cyrs\cyri\cyrr\cyro\cyrv\cyrk\cyri\ %
-\cyrp\cyrr\cyro\cyrg\cyrr\cyra\cyrm\cyrm}}
-
-\newcommand{\answers}{\starsection{\CYRO\cyrt\cyrv\cyre\cyrt\cyrery\ %
-\cyrn\cyra\ \cyrk\cyro\cyrn\cyrt\cyrr\cyro\cyrl\cyrsftsn\cyrn\cyrery\cyre\ %
-\cyrv\cyro\cyrp\cyrr\cyro\cyrs\cyrery}}
 
 \newcommand{\intro}{\starsection{\cyr\CYRV\CYRV\CYRE\CYRD\CYRE%
 \CYRN\CYRI\CYRE}}
@@ -448,8 +418,6 @@
 \CYRI\CYRYA\ \CYRI\ \CYRS\CYRO\CYRK\CYRR\CYRA\CYRSHCH\CYRE\CYRN\CYRI\CYRYA}}
 \newcommand{\conclusion}{\starsection{\cyr\CYRZ\CYRA\CYRK\CYRL\CYRYU%
 \CYRCH\CYRE\CYRN\CYRI\CYRE}}
-\newcommand{\theory}{\starsection{\CYRT\CYRE\CYRO\CYRR\CYRE\CYRT\CYRI\CYRCH\CYRE\CYRS\CYRK\CYRA\CYRYA\ \CYRCH\CYRA\CYRS\CYRT\CYRSFTSN}}
-\newcommand{\pract}{\starsection{\CYRP\CYRR\CYRA\CYRK\CYRT\CYRI\CYRCH\CYRE\CYRS\CYRK\CYRA\CYRYA\ \CYRCH\CYRA\CYRS\CYRT\CYRSFTSN}}
 
 % Section and subsection parameters
 \titlespacing{\section}
@@ -623,48 +591,6 @@
 }
 \newpage
 }
-
-\newcommand{\NIRJournalMakeTitle}
-{
-\thispagestyle{empty}
-\shapka
-%\vspace{0.5cm}
-\begin{center}
-%\parbox{8cm}{
-%\raggedright
-\CYRK\cyra\cyrf\cyre\cyrd\cyrr\cyra\ \@chair
-%}
-\end{center}
-
-\vspace{14pt}
-\vspace{1cm}
-{\centering
-\textbf{\MakeUppercase{\@title}}
-\\[0.3cm]
-{\@workname}
-
-}
-
-\vspace{1.5cm}
-\begin{flushleft}
-\@studenttitle\ \@course\ \cyrk\cyru\cyrr\cyrs\cyra\ \@group\ \cyrg%
-\cyrr\cyru\cyrp\cyrp\cyrery\\
-\@spectype\ \@napravlenie\\
-\@department\\
-\@author
-\end{flushleft}
-\vfill
-
-\noindent
-\CYRR\cyru\cyrk\cyro\cyrv\cyro\cyrd\cyri\cyrt\cyre\cyrl\cyrsftsn\ \CYRN\CYRI\CYRR\\
-\signature{\@nirtitle}{\@nirname}
-
-\vfill
-{\centering{\cyr\CYRS\cyra\cyrr\cyra\cyrt\cyro\cyrv\ \@date}
-
-}
-\newpage
-}
 % --------------------------------------------------------------------------%
 
 % --------------------------------------------------------------------------%
@@ -817,67 +743,17 @@ C\cyro\cyrd\cyre\cyrr\cyrzh\cyra\cyrn\cyri\cyre\ \cyrr\cyra\cyrb%
 % --------------------------------------------------------------------------%
 
 % --------------------------------------------------------------------------%
-% Digital title page
-% --------------------------------------------------------------------------%
-\newcommand{\DigitalMakeTitle}
-{
-\thispagestyle{empty}
-\shapka
-
-\vspace{0.7cm}
-
-\begin{center}
-    \CYRC\cyri\cyrf\cyrr\cyro\cyrv\cyra\cyrya\ \cyrk\cyra\cyrf\cyre\cyrd\cyrr\cyra
-\end{center}
-
-\vspace{0.7cm}
-{\centering
-\textbf{\MakeUppercase{\@title}}
-\\[0.3cm]
-{\@workname}
-
-}
-
-\vspace{0.5cm}
-
-\begin{flushleft}
-\cyro\cyrb\cyru\cyrch\cyra\cyryu\cyrshch\cyri\cyrh\cyrs\cyrya\ \cyrp\cyro\ \CYRD\CYRP\CYRP\ \CYRP\CYRP\ <<\CYRV\cyre\cyrd\cyre\cyrn\cyri\cyre\ \cyrp\cyrr\cyro\cyrf\cyre\cyrs\cyrs\cyri\cyro\cyrn\cyra\cyrl\cyrsftsn\cyrn\cyro\cyrishrt\ \cyrd\cyre\cyrya\cyrt\cyre\cyrl\cyrsftsn\cyrn\cyro\cyrs\cyrt\cyri\ \cyrn\cyra\ \cyro\cyrs\cyrn\cyro\cyrv\cyre\ \cyrd\cyra\cyrn\cyrn\cyrery\cyrh:\ \cyrp\cyrr\cyri\cyrm\cyre\cyrn\cyre\cyrn\cyri\cyre\ \cyrm\cyre\cyrt\cyro\cyrd\cyro\cyrv\ \cyrm\cyra\cyrsh\cyri\cyrn\cyrn\cyro\cyrg\cyro\ \cyro\cyrb\cyru\cyrch\cyre\cyrn\cyri\cyrya>>\ \\
-\@author
-\end{flushleft}
-\vfill
-
-\noindent
-\CYRN\cyra\cyru\cyrch\cyrn\cyrery\cyrishrt\ \cyrr\cyru\cyrk\cyro\cyrv\cyro\cyrd\cyri\cyrt\cyre\cyrl\cyrsftsn:\\
-\signature{\@satitle}{\@saname}
-
-\vspace{0.5cm}
-
-\noindent
-\CYRN\cyra\cyrs\cyrt\cyra\cyrv\cyrn\cyri\cyrk:\\
-\signature{\@patitle}{\@paname}
-
-\vspace{0.5cm}
-
-\noindent
-\CYRR\cyru\cyrk\cyro\cyrv\cyro\cyrd\cyri\cyrt\cyre\cyrl\cyrsftsn\ \CYRD\CYRP\CYRP\ \CYRP\CYRP:\\
-\signatureline{\@chpretitle}{}\\
-\signature{\@chtitle}{\@chname}
-
-\vfill
-{\centering{\cyr\CYRS\cyra\cyrr\cyra\cyrt\cyro\cyrv\ \@date}
-
-}
-\newpage
-}
-% --------------------------------------------------------------------------%
-
-% --------------------------------------------------------------------------%
 % Referat title page
 % --------------------------------------------------------------------------%
 \newcommand{\RefMakeTitle}
 {
 \thispagestyle{empty}
 \shapka
+
+\vspace{1cm}
+\begin{flushright}
+    \CYRK\cyra\cyrf\cyre\cyrd\cyrr\cyra\ \@chair
+\end{flushright}
 
 \vspace{3cm}
 {\centering
@@ -897,9 +773,9 @@ C\cyro\cyrd\cyre\cyrr\cyrzh\cyra\cyrn\cyri\cyre\ \cyrr\cyra\cyrb%
 \end{flushleft}
 \vfill
 
-\noindent
-\CYRP\cyrr\cyro\cyrv\cyre\cyrr\cyre\cyrn\cyro:\\
-\signature{\@satitle}{\@saname}
+%\noindent
+%\CYRP\cyrr\cyro\cyrv\cyre\cyrr\cyri\cyrl\\
+%\signature{\@satitle}{\@saname}
 
 \vfill
 {\centering{\cyr\CYRS\cyra\cyrr\cyra\cyrt\cyro\cyrv\ \@date}
