--- a/yp/thesis.bib
+++ b/yp/thesis.bib
@@ -1,6 +1,6 @@
 % !TeX encoding = Windows-1251
 
-@BOOK{дейт,
+@BOOK{date,
   author    = {Дейт, К Дж},
   title     = {Введение в системы баз данных},
   publisher = {Вильямс},
@@ -10,7 +10,7 @@
   pages     = {1328},
 }
 
-@BOOK{гарсия,
+@BOOK{2,
   author    = {Гарсиа-Молина, Гектор and Ульман, Джеффри Д and Уидом, Дженнифер},
   title     = {Системы баз данных: Полный курс},
   year      = {2003},
@@ -20,17 +20,7 @@
   pages     = {1088},
 }
 
-@BOOk{coronel,
-  title     = {Системы баз данных: проектирование, реализация и управление},
-  author    = {Роб, Питер and Коронел, Карлос},
-  year      = {2004},
-  publisher = {БХВ-Петербург},
-  language  = {russian},
-  pages     = {1024},
-  address   = {Россия, г. Санкт-Петербург, ул. Гончарная, д. 20},
-}
-
-@ARTICLE{ульман,
+@ARTICLE{3,
   title     = {Введение в системы баз данных},
   author    = {Ульман, Дж and Уидом, Дж},
   journal   = {М.: Лори},
@@ -40,7 +30,17 @@
   language  = {russian},
 }
 
-@ARTICLE{кузнецов,
+@BOOK{4,
+  title     = {Системы баз данных: проектирование, реализация и управление},
+  author    = {Роб, Питер and Коронел, Карлос},
+  year      = {2004},
+  publisher = {БХВ-Петербург},
+  language  = {russian},
+  pages     = {1024},
+  address   = {Россия, г. Санкт-Петербург, ул. Гончарная, д. 20},
+}
+
+@ARTICLE{5,
   title     = {Основы баз данных},
   author    = {Кузнецов, Сергей Дмитриевич},
   journal   = {М.: Бином. Лаборатория знаний},
@@ -49,27 +49,17 @@
   language  = {russian},
 }
 
-@BOOK{тарасов,
+@BOOK{6,
   title     = {СУБД для программиста. Базы данных изнутри},
   author    = {Тарасов, СВ},
   publisher = {Солон-Пресс},
   year      = {2015},
   language  = {russian},
   pages     = {320},
-  address   = {Росиия, г. Москва, ул. Садовая Кудринская д. 11},
+  address   = {Россия, г. Москва, ул. Садовая Кудринская д. 11},
 }
 
-@article{быков,
-  title     = {Тенденции технологий разработки баз данных},
-  author    = {Быков, ДС and Быкова, НС},
-  journal   = {Modern Science},
-  number    = {4-3},
-  pages     = {502--505},
-  year      = {2021},
-  language  = {russian},
-}
-
-@BOOK{celko,
+@BOOK{7,
   title     = {Joe Celko's thinking in sets: auxiliary, temporal, and virtual tables in SQL},
   author    = {Celko, Joe},
   year      = {2008},
@@ -79,17 +69,35 @@
   pages     = {384},
 }
 
-@inproceedings{bigdata,
-  title        = {Big data: A review},
-  author       = {Sagiroglu, Seref and Sinanc, Duygu},
-  booktitle    = {2013 international conference on collaboration technologies and systems (CTS)},
-  pages        = {42--47},
-  year         = {2013},
-  organization = {IEEE},
-  language     = {english},
+@inproceedings{8,
+  title={Self-Driving Database Management Systems},
+  author={Pavlo, Andrew and Angulo, Gustavo and Arulraj, Joy},
+  booktitle={CIDR},
+  publisher = {Carnegie Mellon University},
+  address   = {USA, Pennsylvania},
+  volume={4},
+  pages={12},
+  year={2017},
+  language  = {english},
 }
 
-@BOOK{mySQL,
-  title = {MySQL Documentation [{Э}лектронный ресурс]},
-  note  = {URL:~\url{https://dev.mysql.com/doc/} (Дата обращения 22.11.2022). Загл. с экр. Яз. англ.},
+
+@article{9,
+  title={Большие данные: современные подходы к хранению и обработке},
+  author={Клеменков, ПА and Кузнецов, СД},
+  journal={Труды Института системного программирования РАН},
+  volume={23},
+  pages={143--158},
+  year={2012},
+  language  = {russian},
+}
+
+@BOOK{10,
+  title     = {SQL: Полное руководство},
+  author    = {Грофф, Джеймс and Вайнберг, П and Оппель, Э},
+  year      = {2019},
+  publisher = {Диалектика},
+  address   = {Россия, г. Санкт-Петербург},
+  language  = {russian},
+  pages     = {960},
 }
