--- a/yp/intro.tex
+++ b/yp/intro.tex
@@ -1,23 +1,21 @@
 XXI век по праву считается веком информации и информационных технологий. Трудно
 представить сферу деятельности, в которой ни коем образом не приходится работать с
-большими объёмами данных. Исходя из этого, мы закономерно сталкиваемся со
+большими объемами данных. Исходя из этого, мы закономерно сталкиваемся со
 следующими задачами: в каком виде хранить, как быстро искать и обрабатывать, как
 распространять между различными пользователями информацию, обеспечивая при этом
 её безопасность и целостность.
 
 Наиболее эффективным ответом на перечисленные вопросы является создание базы
-данных. Говоря простым языком, база данных "--- это упорядоченный набор
-структурированной информации или данных, которые обычно хранятся в электронном
-виде в компьютерной системе, более формальное определение будет дано в следующих
-разделах. Они используются в науке, здравоохранении, образовании,
+данных. База данных "--- структурированное поименованное хранилище
+информации. Они используются в науке, здравоохранении, образовании,
 бизнесе и не только.
 
 Базы данных могут быть разработаны на различных языках программирования,
-включая SQL, Java, Python, C++, Ruby, PHP, JavaScript и другие. Кроме того, 
+включая Java, Python, C++, Ruby, PHP, JavaScript и другие. Кроме того, 
 существует множество специализированных языков запроса и управления данными,
-таких как: SQL, NoSQL или MongoDB. Но, очевидно, недостаточно просто
-спроектировать базу данных. Её надо поддерживать, обновлять, чистить, каким"=то
-образом к ней обращаться и так далее.
+таких как: SQL, NoSQL или MongoDB. Но, очевидно, недостаточно
+спроектировать базу данных. Её необходимо поддерживать, обновлять, чистить, каким"=то
+образом к ней обращаться.
 
 Неудивительно, что разработчик баз данных "--- это довольно востребованная
 специальность на рынке IT"=специалистов. Давайте подробнее рассмотрим, что
