--- a/yp/main.tex
+++ b/yp/main.tex
@@ -26,7 +26,7 @@
 \begin{document}
 
 % Кафедра (в родительном падеже)
-\chair{математической кибернетики и компьютерных наук}
+\chair{информатики и программирования}
 
 % Тема работы
 \title{Разработчик баз данных}
@@ -74,8 +74,8 @@
 \paname{С.\,В.\,Миронов}
 
 % Руководитель НИР
-\nirtitle{доцент, к.\,п.\,н.} % степень, звание
-\nirname{В.\,А.\,Векслер}
+%\nirtitle{} % степень, звание
+%\nirname{}
 
 % Семестр (только для практики, для остальных типов работ не используется)
 \term{2}
@@ -120,21 +120,50 @@
 % \defabbr
 
 \intro
-%\input{intro.tex}
+\input{intro.tex}
 
 % После введения — серии \section, \subsection и т.д.
+\section{Базы данных и СУБД}
+\subsection{Определение основных понятий: система база данных и СУБД}
+\input{1_1.tex}
+\subsection{Назначение СУБД}
+\input{1_2.tex}
+\subsection{Архитектура системы баз данных}
+\input{1_3.tex}
 
+\section{Принципы проектирования баз данных}
+\input{2.tex}
+\subsection{Общая нотация модели <<Сущность"=связь>>}
+ER"=модель "--- это представление базы данных в виде наглядных графических диаграмм.
+ER"=модель визуализирует процесс, который определяет некоторую предметную
+область. Диаграмма <<сущность>>"=<<связь>> "--- это диаграмма, которая представляет в
+графическом виде сущности, атрибуты и связи.
+\subsubsection{Представление сущностей}
+\input{2_1.tex}
+\subsubsection{Представление связей}
+\input{2_2.tex}
+\subsection{Реляционная модель данных}
+\input{2_3.tex}
+
+\section{Запросы и управление базой данных}
+\subsection{Языки запроса и управления данными}
+\input{3_1.tex}
+\subsection{Язык запросов SQL}
+\input{3_2.tex}
+
+\section{Современные тенденции в разработке баз данных}
+\subsection{BigData и NoSQL базы данных}
+\input{4_1.tex}
+\subsection{Облачные базы данных}
+\input{4_2.tex}
+
+\newpage
 \conclusion
-
-% Библиографический список, составленный вручную, без использования BibTeX
-%
-% \begin{thebibliography}{99}
-%   \bibitem{Ione} Источник 1.
-%   \bibitem{Itwo} Источник 2
-% \end{thebibliography}
+\input{conc.tex}
+\newpage
 
 % Отобразить все источники. Даже те, на которые нет ссылок.
-\nocite{*}
+%\nocite{*}
 
 % Меняем inputencoding на лету, чтобы работать с библиографией в кодировке
 % `cp1251', в то время как остальной документ находится в кодировке `utf8'
@@ -143,9 +172,6 @@
 \bibliographystyle{gost780uv}
 \bibliography{thesis}
 \inputencoding{utf8}
-
-% При использовании biblatex вместо bibtex
-% \printbibliography
 
 % Окончание основного документа и начало приложений Каждая последующая секция
 % документа будет являться приложением
