--- a/yp/1_1.tex
+++ b/yp/1_1.tex
@@ -22,5 +22,6 @@ manager), сервер базы данных (database server) или, что б
 числе других можно назвать утилиты, средства разработки приложений,
 средства проектирования, генераторы отчетов и диспетчер транзакций. 
 
-Зачастую, саму СУБД также называют базой данных, из"=за чего возникает путаница в терминах. Это, безусловно,
+Наиболее распространенными являются две СУБД "--- MySQL и Oracle. Зачастую, саму СУБД также называют
+базой данных, из"=за чего возникает путаница в терминах. Это, безусловно,
 неправильно, но ошибка широко распростронена \cite{date}.
