--- a/yp/3_2.tex
+++ b/yp/3_2.tex
@@ -20,11 +20,17 @@ SQL является языком реляционных баз данных, п
 
 Пример запроса на языке SQL: 
 
-SELECT NAME
+SELECT CITY
 
-    FROM STUDENTS;
+    FROM OFFICES;
 
-Ответом на данный запрос будут все данные из столбца NAME таблицы STUDENTS \cite{10}.
+Ответом на данный запрос будут все данные из столбца CITY таблицы OFFICES (рис. \ref{fig:graph}) \cite{10}.
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\textwidth]{offices.png}
+    \caption{Простая реляционная база данных}
+    \label{fig:graph}
+\end{figure}
 
 К плюсам языка SQL можно отнести его относительную простоту и низкий порог входа, универсальность, эффективность при работе с большими объемами данных. Также SQL имеет широкую поддержку и множество ресурсов для помощи при работе с языком.
 
