--- a/yp/conc.tex
+++ b/yp/conc.tex
@@ -1,12 +1,9 @@
 Профессия разработчика баз данных является ключевой для эффективного управления информацией в современном мире. Спрос 
-на эту профессию будет продолжать расти в ближайшие годы, поскольку количество данных будет продолжать увеличиваться, а 
-компании будут все больше заинтересованы в экспертах по обработке и анализу данных. Ведь даже самоуправляемая база данных нуждается 
-в администрировании, но уже более квалифицированных специалистов. В связи с этим, данная специальность является одной из самых перспективных и высокооплачиваемых в IT"=индустрии.
+на нее будет продолжать расти в ближайшие годы, поскольку количество данных продолжает увеличиваться, а 
+компании все больше заинтересованы в экспертах по их обработке и анализу. Ведь даже самоуправляемая база данных нуждается в администрировании, но уже более квалифицированными специалистами. 
 
-Но и требования к таким специалистам предъявляются соответствующие. Разработчик баз данных должен уметь выбирать наиболее
-подходящую технологию для каждой конкретной задачи. NoSQL базы данных предоставляют новые возможности для работы с 
-неструктурированными данными и обеспечивают высокую доступность и масштабируемость. Однако, SQL базы данных все еще остаются 
-предпочтительными для работы со структурированными данными и сложными запросами. Поэтому разработчик баз данных должен быть 
-готов к использованию обеих технологий и выбирать наиболее подходящую в каждой конкретной ситуации. И, конечно же, разбираться в процессе проектирования баз данных на каждом из рассмотренных ранее уровней.
+Подводя итог, разработчик баз данных должен как минимум знать непосредственно теорию баз данных и свободно владеть языком запросов и управления SQL. Также на практике появится необходимость работать с большими данными, высоконагруженными системами, нереляционными базами данных, облачными технологиями и так далее.
 
+По данным компании интернет"=рекрутмента HeadHunter\footnote{https://hh.ru} на июнь 2023 года в Саратове есть 9 вакансий на эту должность со средней заработной платой 90 тыс.р./месяц, а в Москве "--- 1003 вакансии, с заработной платой от 60 до 600 тыс.р./месяц. При этом, если переформулировать запрос как <<программист SQL>>, то количество вакансий вырастет в Саратове до 92, а в Москве "--- до 4959. Такой результат неудивителен, ведь умение работать с базами данных хотя бы на начальном уровне является базовым для IT"=специалиста. А по данным интернет"=портала Habr\footnote{https://habr.com} владение языком SQL входит в топ"=3 необходимых навыков для программиста.
 
+Обобщая вышесказанное, данная специальность является одной из самых перспективных и высокооплачиваемых в IT"=индустрии.
