--- a/yp/main.tex
+++ b/yp/main.tex
@@ -100,7 +100,7 @@
 
 % Включение нумерации рисунков, формул и таблиц по разделам (по умолчанию -
 % нумерация сквозная) (допускается оба вида нумерации)
-\secNumbering
+%\secNumbering
 
 \tableofcontents
 
