--- a/yp/preamble.sty
+++ b/yp/preamble.sty
@@ -10,5 +10,5 @@
 \usepackage{array}
 \usepackage[english,russian]{babel}
 \usepackage{minted}
-%\usepackage{tempora}
+\usepackage{tempora}
 %\usepackage[hidelinks]{hyperref}
